<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.appsgit.locationupdate.retrofit.MainActivity">


    <TextView
        android:id="@+id/using_batched_location_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:text="@string/text_location_updates"
        android:autoLink="all"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/using_batched_location_view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:text="@string/text_location_updates2"
        android:autoLink="all"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/using_batched_location_view3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:text="@string/text_location_updates3"
        android:autoLink="all"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_margin="10dp">

        <EditText
            android:id="@+id/filterName"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="60dp"
            android:hint="Type your name/email to filter in MapView."/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:padding="5dp"
            android:background="@color/colorAccent"
            android:foreground="?selectableItemBackground"
            android:text="Save Name"
            android:onClick="saveFilterName"></Button>
    </LinearLayout>

    <Button
        android:id="@+id/request_updates_button"
        android:background="@color/colorAccent"
        android:foreground="?selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="requestLocationUpdates"
        android:text="@string/request_updates"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/remove_updates_button"
        android:background="@color/colorAccent"
        android:foreground="?selectableItemBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:onClick="removeLocationUpdates"
        android:text="@string/remove_updates"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/location_updates_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin" />
</LinearLayout>
